# benj-office-hero

./: .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVLOG.md  Dockerfile  HOOKS_REHYDRATION.md  Makefile  README.md  REHYDRATION.md  TESTING_SESSION_2026-03-08.md  alembic.ini  check_db.py  create_user.py  fly.toml  init_testdata.py  init_testdb.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_integration.py  start_backend.ps1  test-integration.py  test-on-emulator.sh  tsconfig.json
.githooks/: commit-msg  post-checkout  post-merge  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  frontend-ci.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_users_and_tokens.py  0003_rate_limits_audit_events.py
apps/admin-web/: .env.example  .eslintrc.js  E2E-TESTING.md  demo-recording.ts  index.html  jest.config.js  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/admin-web/src/: App.tsx  api.ts  auth.tsx  global.d.ts  setupTests.ts
apps/tech-mobile/: App.tsx  JobEntryScreen.tsx  LocationService.ts  LoginScreen.tsx  RouteScreen.tsx  app.json  babel.config.js  global.d.ts  jest.config.js  package-lock.json  package.json  react-navigation.d.ts  tsconfig.json
apps/tech-mobile/__tests__/: JobEntryScreen.test.tsx  LoginScreen.test.tsx  RouteScreen.test.tsx
apps/tech-mobile/src/: App.tsx
apps/tech-web/: index.html  package.json  tsconfig.json
apps/tech-web/src/: main.tsx
docs/: DEVELOPMENT_SETUP.md  GIT_HOOKS_REFERENCE.md  SAGA_RECOVERY.md  SAGA_TUTORIAL.md  erik-corkran-steps.md  glossary.md  hooks-rehydration.md  human-steps.md  worktrees.md
docs/llm/: BACKEND_INTEGRATION_GUIDE.md  DEPLOYMENT-AND-TESTING.md  IMPLEMENTATION-SUMMARY.md  MOBILE_TESTING_PLAN.md  PR_2_DEFECTS_RESOLVED.md  REAL_DEVICE_TESTING_2026-03-09.md  REHYDRATION_COMPLETE.md  SETUP-AND-TESTING.md  SETUP.md  SLICE-5A-COMPLETION.md  STATUS_2026-03-09.md
mcp-server/: pyproject.toml  start.py
mcp-server/src/office_hero_mcp/: client.py  main.py  server.py
mcp-server/src/office_hero_mcp/tools/: __init__.py
mcp-server/src/office_hero_mcp/tools/custom/: health.py  routing.py
project-documents/user/adrs/: README.md
project-documents/user/analysis/: README.md
project-documents/user/architecture/: 003-slices.office-hero.md  050-arch.hld-office-hero.md  051-adr.web-framework.md  051b-adr.api-style.md  052-adr.routing-engine.md  053-adr.tenant-isolation.md  054-adr.hosting.md  055-adr.frontend.md  056-adr.backoffice-saga.md  057-adr.language.md  058-adr.orm.md  059-adr.database.md  060-adr.auth.md  061-adr.mcp-server.md  062-adr.rate-limiting.md  063-adr.logging-observability.md  README.md  patterns.md
project-documents/user/project-guides/: 001-concept.newproject.md  001-concept.office-hero.md  002-spec.newproject.md  002-spec.office-hero.md  003-slices.office-hero.md  README.md
project-documents/user/prompts/: PR-ORCHESTRATION-AGENT.md
project-documents/user/reviews/: README.md
scripts/: bump-version.js  ensure-backend.sh  generate_tools.py  qa_gate.ps1  record-demo.ps1  restart-frontend.js  run-e2e-tests.ps1  run-e2e-tests.sh  setup-dev.ps1  setup-dev.sh  start-backend.ps1  start-backend.sh  start_services.py
src/office_hero/: __init__.py  main.py
tests/: conftest.py  test_admin_audit_events.py  test_adr_compliance.py  test_api_admin.py  test_api_sagas.py  test_auth.py  test_auth_service.py  test_back_office_service.py  test_backoffice_adapter.py  test_cli.py  test_db.py  test_db_utils.py  test_dead_letter_api.py  test_dispatch_saga_api.py  test_generate_mcp_from_openapi.py  test_generate_mcp_integration.py  test_idempotency_service.py  test_mcp_custom_tools.py  test_mcp_generation.py  test_mcp_server.py  test_models.py  test_outbox_lifecycle.py  test_rate_limit_manager.py  test_rate_limit_response.py  test_repositories.py  test_saga_base.py  test_saga_core.py  test_saga_lifecycle.py  test_saga_resilience.py  test_saga_service.py  test_server_manager.py  test_service_startup.py  test_smoke.py
tools/: __init__.py  check_db.py  cli.py  client.py  generate_mcp_from_openapi.py  init_testdata.py  mock_backend.py  server_manager.py
(+80 files in other folders)
