[tool.poetry]
name = "benj-office-hero"
version = "0.1.0"
description = "Office Hero web application"
authors = ["Jake <jake@officehero.dev>"]
packages = [{include = "office_hero", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.104"
uvicorn = {version = ">=0.24", extras = ["standard"]}
httpx = ">=0.24"
click = ">=8.0"
sqlalchemy = ">=2.0"
alembic = ">=1.10"
asyncpg = ">=0.27"
pydantic-settings = ">=2.0"
python-jose = {version = ">=3.3", extras = ["cryptography"]}
passlib = {version = ">=1.7", extras = ["bcrypt"]}
slowapi = ">=0.1"
structlog = ">=24.0"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-asyncio = ">=0.24"
aiosqlite = ">=0.19"
pytest-cov = ">=4.1"
pre-commit = ">=4.0"
ruff = ">=0.8"
black = ">=24.0"
bandit = ">=1.8"
hypothesis = ">=6.88"
pytest-xdist = ">=3.5"
pytest-timeout = ">=2.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
    "--timeout=30",
]
markers = [
    "e2e: end-to-end browser tests",
    "slow: slow integration tests",
    "unit: fast unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
